--- a/motionlayout-start/app/src/main/res/xml/step5.xml
+++ b/motionlayout-start/app/src/main/res/xml/step5.xml
@@ -24,34 +24,54 @@
             app:constraintSetEnd="@+id/end"
             app:duration="3000">
         <OnClick
-                app:targetId="@id/moon"
-                app:clickAction="toggle"
+            app:targetId="@id/moon"
+            app:clickAction="toggle"
         />
 
         <KeyFrameSet>
             <KeyPosition
-                    app:framePosition="25"
-                    app:motionTarget="@id/moon"
-                    app:keyPositionType="parentRelative"
-                    app:percentY="0.6"
+                app:framePosition="25"
+                app:motionTarget="@id/moon"
+                app:keyPositionType="parentRelative"
+                app:percentY="0.6"
+                app:curveFit="linear"
             />
             <KeyPosition
-                    app:framePosition="50"
-                    app:motionTarget="@id/moon"
-                    app:keyPositionType="parentRelative"
-                    app:percentY="0.5"
+                app:framePosition="50"
+                app:motionTarget="@id/moon"
+                app:keyPositionType="parentRelative"
+                app:percentY="0.5"
             />
             <KeyPosition
-                    app:framePosition="75"
-                    app:motionTarget="@id/moon"
-                    app:keyPositionType="parentRelative"
-                    app:percentY="0.6"
+                app:framePosition="75"
+                app:motionTarget="@id/moon"
+                app:keyPositionType="parentRelative"
+                app:percentY="0.6"
             />
 
-            <!-- TODO: Add KeyAttributes to rotate and resize @id/moon -->
+            <KeyAttribute
+                app:framePosition="50"
+                app:motionTarget="@id/moon"
+                android:scaleY="2.0"
+                android:scaleX="2.0"
+                android:rotationX="-360"
+                />
+            <KeyAttribute
+                app:framePosition="25"
+                app:motionTarget="@id/moon"
+                android:translationY="-50dp"
+                />
+            <KeyAttribute
+                app:framePosition="100"
+                app:motionTarget="@id/moon"
+                android:rotationX="-720"
+                />
 
-
-            <!-- TODO: Add KeyAttribute to delay the appearance of @id/credits -->
+            <KeyAttribute
+                app:framePosition="85"
+                app:motionTarget="@id/credits"
+                android:alpha="0.0"
+                />
 
         </KeyFrameSet>
     </Transition>
